added additional configurations

--- a/src/main/resources/application-generator.yml
+++ b/src/main/resources/application-generator.yml
@@ -1,13 +1,16 @@
+MESSAGE_LIMIT: 100000
+
 spring:
   kafka:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
       properties:
+        auto.create.topics.enable: true
         auto.register.schemas: true
         schema.registry.url: ${SCHEMA_REGISTRY_URL}
 kafka:
   generator:
     message-limit:
-      ratings: 100000
+      ratings: ${MESSAGE_LIMIT}
     throttle-ms: 100
