--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<avro.version>1.10.1</avro.version>
-		<confluent.version>7.0.0</confluent.version>
+		<confluent.version>7.0.1</confluent.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -61,14 +61,14 @@
 	<repositories>
 		<repository>
 			<id>confluent</id>
-			<url>http://packages.confluent.io/maven/</url>
+			<url>https://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>confluent</id>
-			<url>http://packages.confluent.io/maven/</url>
+			<url>https://packages.confluent.io/maven/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
