fixed processing-guarantee configs

--- a/src/main/resources/application-versuch16.yml
+++ b/src/main/resources/application-versuch16.yml
@@ -5,4 +5,4 @@ COMPRESSION_TYPE: none
 LINGER_MS: 0
 BATCH_SIZE: 16384
 FETCH_MIN_BYTES: 1
-PROCESSING_GUARANTEE: at_most_once
+PROCESSING_GUARANTEE: exactly_once_v2
