--- a/src/main/resources/application-versuch17.yml
+++ b/src/main/resources/application-versuch17.yml
@@ -1,8 +1,8 @@
-TOPIC_MOVIES: movies.none.batch0
-TOPIC_RATINGS: ratings.none.batch0
+TOPIC_MOVIES: movies.none.batch1
+TOPIC_RATINGS: ratings.none.batch1
 
 COMPRESSION_TYPE: none
 LINGER_MS: 10
 BATCH_SIZE: 50000
 FETCH_MIN_BYTES: 1
-PROCESSING_GUARANTEE: at_most_once
+PROCESSING_GUARANTEE: exactly_once_v2
