--- a/src/main/resources/application-versuch19.yml
+++ b/src/main/resources/application-versuch19.yml
@@ -2,6 +2,7 @@ TOPIC_MOVIES: movies.none.batch1
 TOPIC_RATINGS: ratings.none.batch1
 
 #REPLICATION_FACTOR: 2 # create topics before
+STREAMS_THREADS: 2
 COMPRESSION_TYPE: none
 LINGER_MS: 10
 BATCH_SIZE: 50000
