--- a/src/main/resources/application-versuch11.yml
+++ b/src/main/resources/application-versuch11.yml
@@ -1,5 +1,5 @@
-TOPIC_MOVIES: movies.lz4.batch1
-TOPIC_RATINGS: ratings.lz4.batch1
+TOPIC_MOVIES: movies.lz4.batch
+TOPIC_RATINGS: ratings.lz4.batch
 
 COMPRESSION_TYPE: lz4
 LINGER_MS: 10
