--- a/src/main/resources/application-versuch5.yml
+++ b/src/main/resources/application-versuch5.yml
@@ -1,5 +1,5 @@
-TOPIC_MOVIES: movies.none.batch1
-TOPIC_RATINGS: ratings.none.batch1
+TOPIC_MOVIES: movies.none.batch
+TOPIC_RATINGS: ratings.none.batch
 
 COMPRESSION_TYPE: none
 LINGER_MS: 10
